overflow fixed

--- a/src/main/resources/static/css/user_current_order.css
+++ b/src/main/resources/static/css/user_current_order.css
@@ -304,7 +304,8 @@ body
 #add_product_modal .modal-body {
   padding: 1px;
   height: calc(100vh - 310px);
-  overflow-y: auto;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 #add_product_list{
   margin:0px;
